- Remove JDK 1.4 specific code. - More work on driver properties.